Fix page metadata layout bug on mobile layout

--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -316,6 +316,9 @@ header h1 {
 #page-metadata-block > span {
     white-space: nowrap;
 }
+#page-metadata-block > span#page-author {
+	white-space: normal;
+}
 
 #page-source a {
     font-variant-numeric: oldstyle-nums;
@@ -363,6 +366,7 @@ header h1 {
         font-size: calc((16/18) * var(--GW-base-font-size));
         line-height: calc(25/16);
     }
+    #page-metadata-block > #page-author::after,
     #page-metadata-block > #page-status::after,
     #page-metadata-block > #page-importance::after {
         content: none;
@@ -374,19 +378,19 @@ header h1 {
         justify-content: center;
     }
     /* date, status */
-    #page-metadata-block :nth-child(1),
-    #page-metadata-block :nth-child(2) {
+    #page-metadata-block #page-date-range,
+    #page-metadata-block #page-status {
         order: 1;
     }
     /* certainty, importance */
-    #page-metadata-block :nth-child(3),
-    #page-metadata-block :nth-child(4) {
+    #page-metadata-block #page-confidence,
+    #page-metadata-block #page-importance {
         order: 3;
     }
     /* backlinks, similar, bibliography */
-    #page-metadata-block :nth-child(5),
-    #page-metadata-block :nth-child(6),
-    #page-metadata-block :nth-child(7) {
+    #page-metadata-block .backlinks,
+    #page-metadata-block .similars,
+    #page-metadata-block .link-bibliography {
         order: 5;
     }
     #page-metadata-block::before,
